--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "mrshoikot/encrypt-and-export",
+    "name": "mrshoikot/securecsv",
     "description": "A Laravel package that encrypts one or more columns from a table and export them into CSV",
     "keywords": [
         "mrshoikot",
         "laravel",
-        "encrypt-and-export"
+        "securecsv"
     ],
-    "homepage": "https://github.com/mrshoikot/encrypt-and-export",
+    "homepage": "https://github.com/mrshoikot/securecsv",
     "license": "MIT",
     "authors": [
         {
